# bananaslides

./: .gitignore  README.md  README_cn.md  README_ko.md  pyproject.toml
api/: main.py
docs/: architecture.md  cli.md  installation.md  limitations.md  web.md
src/bananaslides/: __init__.py  cli.py  config.py
src/bananaslides/domain/: __init__.py  models.py
src/bananaslides/modules/: __init__.py
src/bananaslides/modules/detection/: base.py  full_slide_text_detector.py
src/bananaslides/modules/inpainting/: base.py  cv2_inpainter.py  mask.py
src/bananaslides/modules/ocr/: __init__.py  base.py  rapidocr_engine.py
src/bananaslides/modules/ppt/: __init__.py  render.py
src/bananaslides/pipeline/: factory.py  orchestrator.py
src/bananaslides/utils/: artifacts.py  correction.py  geometry.py  image.py  ocr_models.py  pdf.py  ppt_patch.py  text.py
src/bananaslides_webapi/: main.py  service.py  store.py
tests/: test_cv2_inpainter.py  test_factory.py  test_fixed_font_typesetter.py  test_font_normalizer.py  test_full_slide_text_detector.py  test_mask.py  test_ocr_models.py  test_ocr_repair_cli.py  test_pdf.py  test_pipeline_run.py  test_ppt_patch.py  test_rapidocr_engine.py  test_text_and_geometry.py  test_web_api.py
web/: index.html  package-lock.json  package.json  tailwind.config.js
web/src/: App.tsx  i18n.tsx  index.css  main.tsx
web/src/components/: FileChip.tsx  ReviewCanvas.tsx  Shell.tsx  StatusBadge.tsx
web/src/lib/: api.ts  types.ts
web/src/pages/: ExportPage.tsx  JobPage.tsx  ReviewPage.tsx  UploadPage.tsx
(+4 files in other folders)
